[project]
name = "house-price-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "ASHA EDWIN",email = "asha.edwin001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14 " 
dependencies = [
    "pandas (<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "zenml (>=0.93.3,<0.94.0)",
    "mlflow (>=3.10.0,<4.0.0)",
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
